--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,3 +30,8 @@ Layout/LineLength:
 
 Metrics/MethodLength:
   Max: 20
+
+Metrics/BlockLength:
+  Enabled: true
+  Exclude:
+    - 'spec/controllers/**/*_spec.rb'
