--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,11 @@ Style/ZeroLengthPredicate:
 Style/ClassAndModuleChildren:
   Enabled: false
 
+Style/IfUnlessModifier:
+  Enabled: true
+  Exclude:
+    - 'app/controllers/**'
+
 Rails/I18nLocaleTexts:
   Enabled: false
 
