--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,3 +44,4 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/controllers/**/*_spec.rb'
     - 'spec/features/**/*_spec.rb'
+    - 'spec/*_helper.rb'
