--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
-    "@rails/actioncable": "^6.1.7",
     "@babel/core": "^7.21.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-methods": "^7.25.4",
     "@oddcamp/cocoon-vanilla-js": "^1.1.3",
     "@popperjs/core": "^2.11.8",
+    "@rails/actioncable": "^6.1.7",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.3.3",
+    "gon": "^1.0.3",
     "jquery": "^3.7.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
