Added authoriation via VK

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml
+/config/certs/*
+!/config/certs/.keep
 
 /public/packs
 /public/packs-test
