--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,4 +47,5 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/controllers/**/*_spec.rb'
     - 'spec/features/**/*_spec.rb'
+    - 'spec/services/**/*_spec.rb'
     - 'spec/*_helper.rb'
