--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,3 +49,8 @@ Metrics/BlockLength:
     - 'spec/features/**/*_spec.rb'
     - 'spec/services/**/*_spec.rb'
     - 'spec/*_helper.rb'
+
+Metrics/AbcSize:
+  Enabled: true
+  Exclude:
+    - 'app/controllers/oauth_callbacks_controller.rb'
